introduced the EvaluableApplicator; god rid of a few useless overloads and convenience-functions